sample/errors/sample_12.nev

record R { i : int; }
record R { j : int; }

func main() -> int
{
    0
}